--- a/desafio 1/style.css
+++ b/desafio 1/style.css
@@ -131,7 +131,7 @@ div > iframe{
 
 }
 aside{
-    background-color: #1d1c1aaf;
+    background-color: #1d1c1a60;
     border-radius: 10px;
     padding: 10px;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.39);
@@ -141,6 +141,10 @@ aside > ul{
     list-style-type: '\2714\00A0\00A0';
     list-style-position: inside;
     columns: 2;
+}
+
+li{
+    margin-bottom: 8px;
 }
 
 aside > h3{
